--- a/Lab/Lab 2/Practice/M1/M1 DataAcquisition (1).ipynb
+++ b/Lab/Lab 2/Practice/M1/M1 DataAcquisition (1).ipynb
@@ -318,7 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ee0005",
    "language": "python",
    "name": "python3"
   },
@@ -332,7 +332,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b5ecb61516b1243d567afd41f9dd9d0009ccfa8080c336b0c8cbc21bfc0021e7"
+   }
   }
  },
  "nbformat": 4,
