--- a/Lab/Lab Quiz/Exercise0_Solution.ipynb
+++ b/Lab/Lab Quiz/Exercise0_Solution.ipynb
@@ -131,11 +131,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "57e1b559dacf43725e1ed3764b0ee83225f8bdeeef0b183e08a2c01330bea852"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ee0005",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +146,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b5ecb61516b1243d567afd41f9dd9d0009ccfa8080c336b0c8cbc21bfc0021e7"
+   }
   }
  },
  "nbformat": 4,
