--- a/Lab/Lab Quiz/Exercise1_Solution(1).ipynb
+++ b/Lab/Lab Quiz/Exercise1_Solution(1).ipynb
@@ -1831,7 +1831,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ee0005",
    "language": "python",
    "name": "python3"
   },
@@ -1845,7 +1845,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b5ecb61516b1243d567afd41f9dd9d0009ccfa8080c336b0c8cbc21bfc0021e7"
+   }
   }
  },
  "nbformat": 4,
