--- a/Lab/Lab Quiz/Exercise5_Solution(2).ipynb
+++ b/Lab/Lab Quiz/Exercise5_Solution(2).ipynb
@@ -1197,7 +1197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ee0005",
    "language": "python",
    "name": "python3"
   },
@@ -1211,11 +1211,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "e1f735d083bf9debfe4f2d7c67fd5b5cbf47b9de3e7715307badb61c3a9d145d"
+    "hash": "b5ecb61516b1243d567afd41f9dd9d0009ccfa8080c336b0c8cbc21bfc0021e7"
    }
   }
  },
